# symforce_tutorial

./: .gitignore  README.md
symforce_tutorial/: Cameras_Tutorial.py  Codegen_Tutorial.py  Epsilon_Tutorial.py  Geometry_Tutorial.py  Ops_Tutorial.py  Python_Tutorial.py  SymPy_Tutorial.py  Values_Tutorial.py  test_bearing_residual.py
test_fixed_ba/: fixed_ba_generate.py
test_performance/: CMakeLists.txt
test_performance/src/: ceres_main.cpp  common.h  robot_3d_localization_ceres.h  run_dynamic_size.cc  symforce_main.cpp
test_python/: test1.py
test_robot_2d_localization/: 2d_localization_generate.py  robot_2d_localization_codegen_test.py  wx_robot_2d_localization.py
test_sym/: gnss.py  test_matrix.py  test_sym.py  test_sym2.py  test_sym3.py  test_sym4.py  test_sym5.py  vins.py
test_sym/cpp/symforce/sym/: az_el_from_point.h  calc_p_ecef.h  compute_airspeed_h_and_k.h  func2.h  func3.h  gnss_psr_dopp_factor.h  gnss_psr_dopp_residual.h  imu_factor.h  imu_factor1.h  imu_residual.h  matrix_multiply.h  max.h  max2.h  max3.h  max4.h  max5.h  predict_covariance.h  projection_factor.h  projection_gnc_factor.h  projection_gnc_residual.h  projection_residual1.h  sum.h  testMatrix1.h
test_symengine/: CMakeLists.txt
test_symengine/src/: test_symengine.cpp
test_values/: CMakeLists.txt  test_values.cpp
